lab3/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lab3-app
  name: lab3-app
spec:
  ports:
  - name: http
    port: 80
    targetPort: 3000
  selector:
    app: lab3-app
  type: ClusterIP
